Added contact info to the left, interests on the bottom

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
             <div class="body">
                 <p class="left"><em>Mothertongue <strong>English</strong></p>
-            <p class="left"><em>Fluent in <strong>French</strong></p>
-            <p class="left"><em>Basic <strong>German</strong></p>
+            <p class="left">Fluent in <strong>French</strong></p>
+            <p class="left">Basic <strong>German</strong></em></p>
         </div>
 
         <h2>Social Media</h2>
@@ -55,7 +55,15 @@
         <div class="body, left">
                 <p><a href="https://www.facebook.com/marie.godon"><img src="http://www.gotomyapartment.com/sites/default/files/images/FLAT%20FB%20v01%20B%26W.png" class="media"/></a></p>
                 <p><a href="https://ca.linkedin.com/in/mariegodon"><img src="https://ithacaprssa.files.wordpress.com/2014/07/linkedinlogo.png" class="media"/></a></p>
-                <p><a href="https://github.com/mariegodon"><img src="http://www.iconsdb.com/icons/preview/gray/github-10-xxl.png" class="media"/></a></p>
+                <p><a href="https://github.com/mariegodon"><img src="http://www.iconsdb.com/icons/preview/gray/github-10-xxl.png" class="media" style="margin-bottom: 0px"/></a></p>
+        </div>
+        
+        <h2>Contact Me!</h2>
+        
+        <div class="body">
+            <p class="left">514-245-8065</p>
+            <p class="left">mariefrance.godon@gmail.com</p>
+            <p class="left">1501 rue Beaudry, Montreal, Qc, H2L3E6</p>
         </div>
 
     </div>
@@ -115,7 +123,13 @@
     </div>
 
     <footer>
-        <p>1501 rue Beaudry, Montreal, Qc, H2L3E6&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 514-245-8065&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;mariefrance.godon@gmail.com</p>
+        <h4>Interests</h4>
+        <div class="itemContainer">
+        <img src="http://placekitten.com/g/200/300" class="interest"/>
+        <img src="http://placekitten.com/g/200/300" class="interest"/>
+        <img src="http://placekitten.com/g/200/300" class="interest"/>
+        <img src="http://placekitten.com/g/200/300" class="interest"/>
+        </div>
     </footer>
 
 
