Added interest blocks with overlay

--- a/index.html
+++ b/index.html
@@ -48,34 +48,40 @@
                 <p class="left"><em>Mothertongue <strong>English</strong></p>
             <p class="left">Fluent in <strong>French</strong></p>
             <p class="left">Basic <strong>German</strong></em></p>
+            </div>
+
+            <h2>Social Media</h2>
+
+            <div class="body, left">
+                <p>
+                    <a href="https://www.facebook.com/marie.godon"><img src="http://www.gotomyapartment.com/sites/default/files/images/FLAT%20FB%20v01%20B%26W.png" class="media" /></a>
+                </p>
+                <p>
+                    <a href="https://ca.linkedin.com/in/mariegodon"><img src="https://ithacaprssa.files.wordpress.com/2014/07/linkedinlogo.png" class="media" /></a>
+                </p>
+                <p>
+                    <a href="https://github.com/mariegodon"><img src="http://www.iconsdb.com/icons/preview/gray/github-10-xxl.png" class="media" style="margin-bottom: 0px" /></a>
+                </p>
+            </div>
+
+            <h2>Contact Me!</h2>
+
+            <div class="body">
+                <p class="left">514-245-8065</p>
+                <p class="left">mariefrance.godon@gmail.com</p>
+                <p class="left">1501 rue Beaudry, Montreal, Qc, H2L3E6</p>
+            </div>
+
         </div>
 
-        <h2>Social Media</h2>
-
-        <div class="body, left">
-                <p><a href="https://www.facebook.com/marie.godon"><img src="http://www.gotomyapartment.com/sites/default/files/images/FLAT%20FB%20v01%20B%26W.png" class="media"/></a></p>
-                <p><a href="https://ca.linkedin.com/in/mariegodon"><img src="https://ithacaprssa.files.wordpress.com/2014/07/linkedinlogo.png" class="media"/></a></p>
-                <p><a href="https://github.com/mariegodon"><img src="http://www.iconsdb.com/icons/preview/gray/github-10-xxl.png" class="media" style="margin-bottom: 0px"/></a></p>
-        </div>
-        
-        <h2>Contact Me!</h2>
-        
-        <div class="body">
-            <p class="left">514-245-8065</p>
-            <p class="left">mariefrance.godon@gmail.com</p>
-            <p class="left">1501 rue Beaudry, Montreal, Qc, H2L3E6</p>
-        </div>
-
-    </div>
 
 
+        <div id="right">
+            <h3>Education</h3>
 
-    <div id="right">
-        <h3>Education</h3>
-
-        <div class="body">
-            <p class="right"><strong>Full-Stack Web Development Boot Camp</strong></p>
-            <p class="right"><em>DecodeMTL, 2016, To Be Completed</em></p>
+            <div class="body">
+                <p class="right"><strong>Full-Stack Web Development Boot Camp</strong></p>
+                <p class="right"><em>DecodeMTL, 2016, To Be Completed</em></p>
             </div>
 
             <div class="body">
@@ -125,10 +131,22 @@
     <footer>
         <h4>Interests</h4>
         <div class="itemContainer">
-        <img src="http://placekitten.com/g/200/300" class="interest"/>
-        <img src="http://placekitten.com/g/200/300" class="interest"/>
-        <img src="http://placekitten.com/g/200/300" class="interest"/>
-        <img src="http://placekitten.com/g/200/300" class="interest"/>
+            <div class="interest">
+                <img src="http://placekitten.com/g/200/300" />
+                <p><span>Skiing</span></p>
+            </div>
+            <div class="interest">
+                <img src="http://placekitten.com/g/200/300" />
+                <p><span>HIIT &amp; Yoga</span></p>
+            </div>
+            <div class="interest">
+                <img src="http://placekitten.com/g/200/300" />
+                <p><span>Coding</span></p>
+            </div>
+            <div class="interest">
+                <img src="http://placekitten.com/g/200/300" />
+                <p><span>Cats</span></p>
+            </div>
         </div>
     </footer>
 
