Replaced cat placeholder images with real images, make images colorful on hover

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div style="height: 30px"></div>
-        <img src="http://placekitten.com/g/200/300" id="photo" />
+        <img src="images/marieround.jpg" id="photo"/>
         <h1>Marie Godon</h1>
         <p id="tagline">Web development student at DecodeMTL, Mechanical Engineering graduate</p>
     </header>
@@ -132,19 +132,19 @@
         <h4>Interests</h4>
         <div class="itemContainer">
             <div class="interest">
-                <img src="http://placekitten.com/g/200/300" />
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/01/08/38/5c/bonzai-trail.jpg" />
                 <p><span>Skiing</span></p>
             </div>
             <div class="interest">
-                <img src="http://placekitten.com/g/200/300" />
+                <img src="images/gym.jpg" />
                 <p><span>HIIT &amp; Yoga</span></p>
             </div>
             <div class="interest">
-                <img src="http://placekitten.com/g/200/300" />
-                <p><span>Coding</span></p>
+                <img src="images/kayak.jpg" />
+                <p><span>Travelling</span></p>
             </div>
             <div class="interest">
-                <img src="http://placekitten.com/g/200/300" />
+                <img src="images/ella.JPG" />
                 <p><span>Cats</span></p>
             </div>
         </div>
