Updated personal image, added icon

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css' />
+    <link rel="icon" href="images/marie.jpg"/>
     <title>Marie Godon | Resume</title>
 </head>
 
 <body>
     <header>
         <div style="height: 30px"></div>
-        <img src="images/marieround.jpg" id="photo"/>
+        <img src="images/marie.jpg" id="photo"/>
         <h1>Marie Godon</h1>
         <p id="tagline">Web development student at DecodeMTL, Mechanical Engineering graduate</p>
     </header>
