--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="stylesheet.css" />
-    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css' />
-    <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css' />
-    <link rel="icon" href="images/marie.jpg"/>
-    <title>Marie Godon | Resume</title>
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:200' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css' />
+    <link rel="icon" href="images/marie.jpg" />
+    <title>Marie Godon</title>
 </head>
 
 <body>
     <header>
         <div style="height: 30px"></div>
-        <img src="images/marie.jpg" id="photo"/>
+        <img src="images/marie.jpg" id="photo" />
         <h1>Marie Godon</h1>
         <p id="tagline">Web development student at DecodeMTL, Mechanical Engineering graduate</p>
     </header>
@@ -120,7 +120,7 @@
 
             <div class="body">
                 <p class="right"><strong>Waitress</strong></p>
-                <p class="right"><em>Wienstein&Gavino's, 2011 - Present</em></p>
+                <p class="right"><em>Wienstein &amp; Gavino's, 2011 - Present</em></p>
                 <ul>
                     <li>Provide impeccable customer service and team communication in a high-volume, high-pressure environment</li>
                 </ul>
@@ -134,19 +134,19 @@
         <div class="itemContainer">
             <div class="interest">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/01/08/38/5c/bonzai-trail.jpg" />
-                <p><span>Skiing</span></p>
+                <p><span>skiing</span></p>
             </div>
             <div class="interest">
                 <img src="images/gym.jpg" />
-                <p><span>HIIT &amp; Yoga</span></p>
+                <p><span>HIIT &amp; yoga</span></p>
             </div>
             <div class="interest">
                 <img src="images/kayak.jpg" />
-                <p><span>Travelling</span></p>
+                <p><span>travelling</span></p>
             </div>
             <div class="interest">
                 <img src="images/ella.JPG" />
-                <p><span>Cats</span></p>
+                <p><span>cats</span></p>
             </div>
         </div>
     </footer>
